--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ push = true
 
 [tool.bumpver.file_patterns]
 "pyproject.toml" = [
-    'current_version = "{version}"', 'version = "{version}"'
+    '^current_version = "{version}"$',
+    '^version = "{version}"$'
 ]
-
-"src/easy_di/__init__.py" = ["{version}"]
+"src//easy_di//__init__.py" = ['^__version__ = "{version}"$']
