--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "easy-di"
+name = "easy-dependency-injection"
 version = "0.1.0"
 description = "Easy to use Dependency Injection Framework"
 readme = "README.md"
